--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet"> 
+
     <!-- my font -->
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet"> 
+
     <!-- my css -->
     <link rel="stylesheet" href="css/style.css">
 
@@ -56,16 +58,34 @@
       <!-- info -->
       <div class="container">
       <div class="row overview">
+
         <div class="col overview-info">
           <h4> Easy to Use Cloud Budget<br> Management Software</h4>
-          <p>Our software is made so you can access and manage your budget <br> and expenses online at any time from any device. It provides detailed income <br> and expense reports with graphs so you can easilly see your spending <br> patterns and budget at a glance. Read below to find out more.</p>
+          <p>Our software is made so you can access and manage your budget and expenses online at any time from any device. It provides detailed income and expense reports with graphs so you can easilly see your spending patterns and budget at a glance. Read below to find out more.</p>
+          <a href="" class="btn">Learn More</a>
         </div>
 
-        <div class="col-overview-2">
-          <img src="/css/img/rsz_2.png" alt="meetings" class="img-fluid"></div>
-      </div>
+        <div class="col overview-img">
+          <img src="/css/img/Video_bg.png" alt="meetings"></div>
+        </div>
     </div>
       <!-- info end -->
+
+      <!-- features start -->
+      <div class="card-group">
+        <div class="container">
+          <div class="card features-1" style="width: 18rem;">
+            <img src="/css/img/Bg1.png" class="card-img-top" alt="">
+            <div class="card-body">
+              <h5 class="card-title">Supports All Currencies and Cards</h5>
+              <p class="card-text">We support all popular currencies and is fully customizable to add</p>
+              <a href="#" class="btn">Read More</a>
+            </div>
+          </div>
+        </div>
+        </div>
+      </div>
+      <!-- features end -->
 
 
     </div>
